LinKreta_POC_Repository/force-app/main/default/objects/datamask__Object_Metadata__mdt/fields/datamask__Field_History_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>datamask__Field_History_Deactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field History Deactivated</label>
    <type>Checkbox</type>
</CustomField>